--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/home.css">
-    <title>Document</title>
+    <title>Learn about animals!</title>
 </head>
 
 <body>
+    <header><h1>Click an animal to learn more about it!</h1></header>
     <main>
         <section id="animals"></section>
-        <!-- <div id="bear"><a href="./animals/index.html?id=1"><img src="./assets/bear.webp"></a></div>
-        <div id="salmon"></div>
-        <div id="human"></div> -->
-
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2022 Alchemy Code Lab</div>
