--- a/animals/index.html
+++ b/animals/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/home.css">
-    <title>Document</title>
+    <title>Animal details</title>
 </head>
 <body>
     <a href="/">Home</a>
